--- a/www/index.html
+++ b/www/index.html
@@ -7,9 +7,12 @@
     <div ng-controller="listsController">
       <h1>TODOTXTaaS</h1>
       (projects and contexts are comma seperated)
+      <a href="/todo.txt" target="_blank">todo.txt</a>
       <ul>
         <li ng-repeat="d in all">
           <input type="checkbox" ng-model="d.complete" ng-change="markItem(d)" />
+
+          <div style="width: 75px; display: inline-block;">{{d.complete && formatDate(d.date)}}</div>
 
           <input type="text" ng-model="d.text" ng-change="updateItem(d)" />
 
@@ -17,7 +20,6 @@
 
           +<input type="text" ng-model="d.projects" ng-change="updateItem(d)" />
 
-          {{d.complete && d.date}}
         </li>
       </ul>
 
@@ -36,6 +38,11 @@
 
       $scope.stringify = function(a) {
         return JSON.stringify(a)
+      }
+
+      $scope.formatDate = function(d) {
+        console.log(new Date(d).toISOString().substring(0, 10))
+        return new Date(d).toISOString().substring(0, 10)
       }
 
       $scope.get = function() {
