embeded stuff into iframe

--- a/www/index.html
+++ b/www/index.html
@@ -27,9 +27,7 @@
       <button ng-click="makeNew(newItem)">new</button>
 
       <p>
-        Data visualization here
-        <br/>
-        completed: d.complete && d.date
+        <iframe src="/analytics.html" style="width: 100%; height: 500px;"></iframe>
       </p>
     </div>
 
