--- a/www/index.html
+++ b/www/index.html
@@ -1,13 +1,17 @@
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="todo.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <title>lists</title>
   </head>
-  <body ng-app="listsapp">
 
+  <body ng-app="listsapp">
+    <div class="container">
+      <h1 class="title">TODOTXTaaS</h1>
     <div ng-controller="listsController">
-      <h1>TODOTXTaaS</h1>
+      <div class="col-md-8">
       (projects and contexts are comma seperated)
-      <a href="/todo.txt" target="_blank">todo.txt</a>
+    <a href="/todo.txt" target="_blank">todo.txt</a>
       <ul>
         <li ng-repeat="d in all">
           <input type="checkbox" ng-model="d.complete" ng-change="markItem(d)" />
@@ -22,16 +26,21 @@
 
         </li>
       </ul>
+    </div>
 
+    <div class="col-md-4">
       <input type="text" ng-model="newItem"/>
       <button ng-click="makeNew(newItem)">new</button>
-
+    </div>
+      <div class="col-md-2">
       <p>
         Data visualization here
         <br/>
         completed: d.complete && d.date
       </p>
     </div>
+  </div>
+     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
     <script>
@@ -104,5 +113,8 @@
 
     })
     </script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   </body>
 </html>
