removed iframe border

--- a/www/index.html
+++ b/www/index.html
@@ -44,7 +44,7 @@
 
 
       <p>
-        <iframe src="/analytics.html" style="width: 100%; height: 500px;"></iframe>
+        <iframe src="/analytics.html" style="width: 100%; height: 500px; border: 0px;" border=0></iframe>
       </p>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
